# libronda

./: .gitignore  Cargo.toml  README.md  setup.py
core/: Cargo.toml
core/src/: lib.rs
core/src/graph/: combine.rs  graph.rs
core/src/version/: comp_op.rs  errors.rs  matching.rs  mod.rs  spec_trees.rs  version.rs  version_part.rs
core/src/version/custom_parts/: pep440.rs
core/src/version/parsers/: conda.rs  mod.rs
core/src/version/test/: macros.rs
core/src/version/test_tools/: macros.rs
python/: Cargo.toml
python/src/: lib.rs  python_interface.rs
ronda/: __init__.py
src/: lib.rs  python_interface.rs  repodata.rs
src/graph/: graph.rs  mod.rs
src/repodata/: mod.rs  repodata.rs
src/resolve/: assignment.rs  incompat.rs  mod.rs
src/version/: comp_op.rs  errors.rs  matching.rs  mod.rs  version.rs  version_compare.rs
src/version/custom_parts/: pep440.rs
src/version/parsers/: conda.rs  default.rs
src/version/test/: macros.rs
