[package]
name = "libronda"
version = "0.1.0"
authors = ["Anaconda, Inc. <conda@anaconda.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features=["derive"]}
#serde_derive = "1.0"
serde_json = "1.0"
petgraph = "0.4"
lazy_static = "1.4"
regex = "1.3"
rstest = "0.4"
paste = "0.1"
unicase = "2.5"

[lib]
name = "ronda"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.3"
features = ["extension-module"]