[package]
name = "ronda-py"
version = "0.1.0"
authors = ["Anaconda, Inc. <conda@anaconda.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libronda = { path = "../core"}

[dependencies.cpython]
version = "0.3"
features = ["extension-module"]

[lib]
name = "ronda"
crate-type = ["cdylib"]